--- a/stock_job/pom.xml
+++ b/stock_job/pom.xml
@@ -9,10 +9,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <description>股票后端核心工程</description>
-    <artifactId>stock_backend</artifactId>
-    <!--不指定打包方式默认就是jar-->
     <packaging>jar</packaging>
+    <artifactId>stock_job</artifactId>
+    <description>核心功能:拉取股票数据</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,28 +20,21 @@
     </properties>
 
     <dependencies>
-        <!--引入公共依赖-->
         <dependency>
             <groupId>com.lbj</groupId>
             <artifactId>stock_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <!-- 基本依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--springboot测试依赖-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!--密码加密和校验工具包-->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-crypto</artifactId>
         </dependency>
 
         <dependency>
@@ -50,20 +42,12 @@
             <artifactId>hutool-all</artifactId>
         </dependency>
 
-        <!--redis场景依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
-        <!-- redis创建连接池，默认不会创建连接池 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.github.ben-manes.caffeine</groupId>
-            <artifactId>caffeine</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
