--- a/stock_backend/src/main/resources/application.yml
+++ b/stock_backend/src/main/resources/application.yml
@@ -27,6 +27,9 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true # 开启驼峰映射
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    cache-enabled: false # 禁止二级缓存
+    local-cache-scope: statement # 一级缓存默认开启
 # pagehelper配置
 pagehelper:
   helper-dialect: mysql #指定分页数据库类型（方言）
