--- a/stock_job/src/main/resources/application-stock.yml
+++ b/stock_job/src/main/resources/application-stock.yml
@@ -12,3 +12,12 @@ stock:
     - b_FSSTI # 新加坡
   marketUrl: http://hq.sinajs.cn/list=
   blockUrl: http://vip.stock.finance.sina.com.cn/q/view/newSinaHy.php
+
+
+# 定时任务线程池基础参数
+task:
+  pool:
+    corePoolSize: 5 # 核心线程数
+    maxPoolSize: 20 # 设置最大线程数
+    keepAliveSeconds: 300 # 设置线程活跃时间，单位秒
+    queueCapacity: 100 # 设置队列容量
