--- a/stock_common/pom.xml
+++ b/stock_common/pom.xml
@@ -128,6 +128,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
         </dependency>
+        <!--引入shardingjdbc依赖-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
